# open-dictionary

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: curation_rulebook.md  export_contracts.md  system_framing.md
fixtures/wiktionary/: raw.jsonl  raw.summary.json
scripts/: build_raw_fixture.py
src/open_dictionary/: __init__.py  cli.py
src/open_dictionary/config/: __init__.py  settings.py
src/open_dictionary/contracts/: __init__.py  language.py
src/open_dictionary/db/: bootstrap.py  connection.py
src/open_dictionary/llm/: __init__.py  client.py  config.py  define.py  define_enricher.py  prompt.py
src/open_dictionary/pipeline/: __init__.py  progress.py  runs.py
src/open_dictionary/sources/wiktionary/: __init__.py  acquire.py  artifacts.py  contracts.py  download.py  extract.py  progress.py  project.py  stream.py
src/open_dictionary/stages/curated_build/: __init__.py  stage.py  transform.py
src/open_dictionary/stages/export_distribution_jsonl/: __init__.py  schema.py  stage.py
src/open_dictionary/wikitionary/: pre_process.py  raw_ingestion.py
tests/: conftest.py  test_cli.py  test_config_settings.py  test_curated_stage.py  test_curated_transform.py  test_db_bootstrap_and_raw_stage.py  test_end_to_end_fixture_pipeline.py  test_export_distribution_jsonl.py  test_export_distribution_sqlite.py  test_export_jsonl.py  test_llm_enrich.py  test_pipeline_runs.py  test_raw_ingest_loader.py  test_wiktionary_acquire.py  test_wiktionary_artifacts.py  test_wiktionary_download_extract.py  test_wiktionary_stream_and_project.py
(+12 files in other folders)
