[project]
name = "open-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahpx", email = "AHpx@yandex.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
opend = "open_dictionary:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
